--- a/appspec.yml
+++ b/appspec.yml
@@ -3,7 +3,7 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu/deploy-temp/
+pwd    destination: /home/ubuntu/deploy-temp/
 
 hooks:
   BeforeInstall:
